test/sema/trait_objects/coerce_impl_to_impl_assignment_err.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait A {}

trait B : A {}

trait C {}

struct S {
  impl A;
}

fn foo(x: *impl A, mut y: *impl B, mut z: *impl C) {
  // CHECK: [[# @LINE + 1 ]]:7: error: expected to assign '*impl B' but received '*impl A' instead
  y = x;
  
  // CHECK: [[# @LINE + 1 ]]:7: error: expected to assign '*impl C' but received '*impl B' instead
  z = y;
}

fn main() {}
